syntax = "proto3";

package marketdata;

option go_package = "github.com/Aidin1998/pincex_unified/api/marketdata;marketdata";

message SubscribeRequest {
  string client_id = 1;
  string symbol = 2;
  repeated int32 levels = 3;
  Frequency frequency = 4;
  bool compression = 5;
}

message Frequency {
  int64 seconds = 1;
  int32 nanos = 2;
}

message Update {
  string symbol = 1;
  int32 price_level = 2;
  double bid = 3;
  double ask = 4;
  int64 timestamp = 5;
}

service MarketData {
  rpc Subscribe(SubscribeRequest) returns (stream Update);
}
